# x-brief

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGES.md  CONTEXT.md  CONTRIBUTING.md  DEFECT-OVERNIGHT-FEB26.md  DEFECT.md  DESIGN.md  LICENSE  OPENSOURCE_REFACTOR.md  OPENSOURCE_SECURITY.md  OPEN_SOURCE_READINESS_AUDIT.md  PHASE2_COMPLETE.md  README.md  SAAS_ANALYSIS.md  SECURITY.md  SETUP.md  SPEC-v2-curation.md  TAB_NAV_BUG.md  VIDEO_PLAYER_SPEC.md  fetch_following.py  pyproject.toml  timeline_scans
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
configs/: example.json
scripts/: trigger-scan.example.sh
tests/: test_cli.py  test_curator.py  test_dedup.py  test_models.py  test_pipeline.py  test_scan_reader.py  test_scorer.py
videos/: package-lock.json  package.json  tsconfig.json
videos-terry/: package-lock.json  package.json  render.sh  tsconfig.json
videos-terry/src/: Root.tsx  XBriefLaunch.tsx  XBriefLaunchV2.tsx
videos/src/: Root.tsx  XBriefLaunch.tsx  XBriefLaunchV2.tsx
web/: .env.example  README.md  REDESIGN_SUMMARY.md  VERIFICATION_CHECKLIST.md  package-lock.json  package.json  pnpm-lock.yaml
web/convex/: briefings.ts  preferences.ts  schema.ts  users.ts
web/public/: test-video.html
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: briefing-view.tsx  (+1 more)
x_brief/: __init__.py  analyzer.py  cache.py  cli.py  config.py  curator.py  dedup.py  enrichment.py  fetcher.py  formatter.py  models.py  pipeline.py  scan_reader.py  scorer.py
(+20 files in other folders)
