[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-brief"
version = "0.1.0"
description = "AI-powered X/Twitter timeline curator and briefing generator"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Steve Cook" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["x", "twitter", "briefing", "ai", "news", "curation", "timeline"]
dependencies = [
    "httpx>=0.27.0",
    "sqlite-utils>=3.35",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/steve-cooks/x-brief"
Repository = "https://github.com/steve-cooks/x-brief"
Issues = "https://github.com/steve-cooks/x-brief/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
x-brief = "x_brief.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["x_brief*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
